manifest/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:583857255987:certificate/0c9f0772-8223-4984-a58c-38948d154c71
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    # alb.ingress.kubernetes.io/backend-protocol-version: HTTP2 # This does not work with ArgoCD server for some reason, need to investigate further.
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: argocd-aws-load-balancer-ingress
spec:
  ingressClassName: alb
  rules:
    - host: argocd.gnaig.click
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:583857255987:certificate/0c9f0772-8223-4984-a58c-38948d154c71
    alb.ingress.kubernetes.io/conditions.argocd-server: |
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]  
    # Use GRPC backend protocol for native gRPC
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: ip
    # pair these 2 if you want to use /grpc.health.v1.Health/Check instead of 
    # /AWS.ALB/healthcheck with success code 12 this does not work atm =D
    # alb.ingress.kubernetes.io/healthcheck-path: /grpc.health.v1.Health/Check
    # alb.ingress.kubernetes.io/success-codes: '0'
    # alb.ingress.kubernetes.io/load-balancer-attributes: health_check_logs.s3.enabled=true,health_check_logs.s3.bucket=quick-use-gnaig,access_logs.s3.enabled=true,access_logs.s3.bucket=quick-use-gnaig

  labels:
    app: argocd-grpc-aws-load-balancer-ingress 
spec:
  ingressClassName: alb
  rules:
    - host: grpc-argocd.gnaig.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
